--- a/demo/static/jqueryPagination/index.html
+++ b/demo/static/jqueryPagination/index.html
@@ -84,6 +84,7 @@
 					currentPage: 1,
 					totalPage: 12,
 					callback: function(current) {
+										alert(current);
 						$("#current1").text(current)
 					}
 				});
@@ -96,6 +97,7 @@
 					prevPageText: "< 上一页",
 					nextPageText: "下一页 >",
 					callback: function(current) {
+					alert(current);
 						$("#current2").text(current)
 					}
 				});
@@ -110,6 +112,7 @@
 					prevPageText: "上一页",
 					nextPageText: "下一页",
 					callback: function(current) {
+										alert(current);
 						$("#current3").text(current)
 					}
 				});
